Update documentacao do projeto README.md